--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
-    "name": "static-site",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-      "inquirer": "8.2.4"
-    }
+  "name": "09-pro-readme-generator",
+  "version": "1.0.0",
+  "description": "This site is a professional README generator. The module 9 challenge assignment.",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lnsvn/09-pro-readme-generator.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/lnsvn/09-pro-readme-generator/issues"
+  },
+  "homepage": "https://github.com/lnsvn/09-pro-readme-generator#readme",
+  "dependencies": {
+    "inquirer": "^8.2.4"
   }
-  
+}
